fix bug with drag and drop reordering wrapped waiting groups

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -63,23 +63,14 @@
 .cdk-drag-preview p {
   display: none;
 }
-.cdk-drag-preview.waiting-group-players-container {
-  border: none;
-  box-sizing: border-box;
-  border-radius: 4px;
-  box-shadow:
-    0 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0 8px 10px 1px rgba(0, 0, 0, 0.14),
-    0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
-.cdk-drag-placeholder.waiting-group-players-container {
+.cdk-drag-placeholder.waiting-group {
   opacity: 0;
 }
-.cdk-drag-animating.waiting-group-players-container {
+.cdk-drag-animating.waiting-group {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 .queued-groups-list-container.cdk-drop-list-dragging
-  .waiting-group-players-container:not(.cdk-drag-placeholder) {
+  .waiting-group:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
